accounts_passwords_pam_tally2: depend on pam being installed
accounts_passwords_pam_tally2 is dependent on pam being installed, so it should express that with "platform: package[pam]" as other rules (such as accounts_password_pam_unix_remember) already do.

Signed-off-by: Craig Andrews <candrews@integralblue.com>

--- a/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_tally2/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-pam/locking_out_password_attempts/accounts_passwords_pam_tally2/rule.yml
@@ -66,3 +66,5 @@ ocil: |-
     account required pam_tally2.so deny={{{ xccdf_value("var_password_pam_tally2") }}}</pre>
 
     If the account option is missing, or commented out, this is a finding.
+
+platform: package[pam]
