--- a/linux_os/guide/system/accounts/accounts-physical/screen_locking/console_screen_locking/vlock_installed/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-physical/screen_locking/console_screen_locking/vlock_installed/rule.yml
@@ -58,3 +58,5 @@ template:
         pkgname@ubuntu1604: vlock
         pkgname@ubuntu1804: vlock
         pkgname@ubuntu2004: vlock
+
+platform: machine
