--- a/linux_os/guide/system/accounts/accounts-restrictions/root_logins/use_pam_wheel_for_su/rule.yml
+++ b/linux_os/guide/system/accounts/accounts-restrictions/root_logins/use_pam_wheel_for_su/rule.yml
@@ -69,3 +69,4 @@ vuldiscussion: |-
     Without re-authentication, users may access resources or perform tasks for which they do not have authorization.
     When operating systems provide the capability to escalate a functional capability, it is critical the user re-authenticate.
 
+platform: package[pam]
