sudo_require_reauthentication: depend on sudo being installed
sudo_require_reauthentication only makes sense if sudo is installed.

Signed-off-by: Craig Andrews <candrews@integralblue.com>

--- a/linux_os/guide/system/software/sudo/sudo_require_reauthentication/rule.yml
+++ b/linux_os/guide/system/software/sudo/sudo_require_reauthentication/rule.yml
@@ -64,3 +64,5 @@ fixtext: |-
     Remove any duplicate or conflicting lines from /etc/sudoers and /etc/sudoers.d/ files.
 
 srg_requirement: '{{{ full_name }}} must require re-authentication when using the "sudo" command.'
+
+platform: package[sudo]
