--- a/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/ansible/shared.yml
+++ b/linux_os/guide/system/auditing/auditd_configure_rules/audit_privileged_commands/audit_rules_privileged_commands/ansible/shared.yml
@@ -1,58 +1,63 @@
 # platform = multi_platform_rhel,multi_platform_fedora,multi_platform_ol,multi_platform_rhv,multi_platform_sle
 # reboot = false
-# strategy = restrict
+# strategy = configure
 # complexity = low
 # disruption = low
 
-- name: Search for privileged commands
-  shell: |
-    set -o pipefail
-    find / -not \( -fstype afs -o -fstype ceph -o -fstype cifs -o -fstype smb3 -o -fstype smbfs -o -fstype sshfs -o -fstype ncpfs -o -fstype ncp -o -fstype nfs -o -fstype nfs4 -o -fstype gfs -o -fstype gfs2 -o -fstype glusterfs -o -fstype gpfs -o -fstype pvfs2 -o -fstype ocfs2 -o -fstype lustre -o -fstype davfs -o -fstype fuse.sshfs \) -type f \( -perm -4000 -o -perm -2000 \) 2> /dev/null
-  args:
-    executable: /bin/bash
-  check_mode: no
-  register: find_result
+- name: {{{ rule_title }}} - Set List of Mount Points Which Permits Execution of Privileged Commands
+  ansible.builtin.set_fact:
+    privileged_mount_points: "{{(ansible_facts.mounts | rejectattr('options', 'search', 'noexec|nosuid') | map(attribute='mount') | list ) }}"
+
+- name: {{{ rule_title }}} - Search for Privileged Commands in Eligible Mount Points
+  ansible.builtin.shell:
+    cmd: find {{ item }} -xdev -perm /6000 -type f 2>/dev/null
+  register: result_privileged_commands_search
   changed_when: false
   failed_when: false
+  with_items: "{{ privileged_mount_points }}"
 
-# Inserts/replaces the rule in /etc/audit/rules.d
+- name: {{{ rule_title }}} - Set List of Privileged Commands Found in Eligible Mount Points
+  ansible.builtin.set_fact:
+    privileged_commands: "{{( result_privileged_commands_search.results | map(attribute='stdout_lines') | select() | list )[-1] }}"
 
-- name: Search /etc/audit/rules.d for audit rule entries
-  find:
-    paths: "/etc/audit/rules.d"
-    recurse: no
-    contains: "^.*path={{ item }} .*$"
-    patterns: "*.rules"
-  with_items:
-    - "{{ find_result.stdout_lines }}"
-  register: files_result
+- name: {{{ rule_title }}} - Privileged Commands are Present in the System
+  block:
+    - name: {{{ rule_title }}} - Ensure Rules for All Privileged Commands in augenrules Format
+      ansible.builtin.lineinfile:
+        path: /etc/audit/rules.d/privileged.rules
+        line: '-a always,exit -F path={{ item }} -F perm=x -F auid>={{{ auid }}} -F auid!=unset -F key=privileged'
+        regexp: "^.*path={{ item | regex_escape() }} .*$"
+        create: yes
+      with_items:
+        - "{{ privileged_commands }}"
 
-- name: Overwrites the rule in rules.d
-  lineinfile:
-    path: "{{ item.1.path }}"
-    line: '-a always,exit -F path={{ item.0.item }} -F auid>={{{ auid }}} -F auid!=unset -F key=privileged'
-    create: no
-    regexp: "^.*path={{ item.0.item }} .*$"
-  with_subelements:
-    - "{{ files_result.results }}"
-    - files
+    - name: {{{ rule_title }}} - Ensure Rules for All Privileged Commands in auditctl Format
+      ansible.builtin.lineinfile:
+        path: /etc/audit/audit.rules
+        line: '-a always,exit -F path={{ item }} -F perm=x -F auid>={{{ auid }}} -F auid!=unset -F key=privileged'
+        regexp: "^.*path={{ item | regex_escape() }} .*$"
+        create: yes
+      with_items:
+        - "{{ privileged_commands }}"
 
-- name: Adds the rule in rules.d
-  lineinfile:
-    path: /etc/audit/rules.d/privileged.rules
-    line: '-a always,exit -F path={{ item.item }} -F auid>={{{ auid }}} -F auid!=unset -F key=privileged'
-    create: yes
-  with_items:
-    - "{{ files_result.results }}"
-  when: files_result.results is defined and item.matched == 0
+    - name: {{{ rule_title }}} - Search for Duplicated Rules in Other Files
+      ansible.builtin.find:
+        paths: "/etc/audit/rules.d"
+        recurse: no
+        contains: "^-a always,exit -F path={{ item }} .*$"
+        patterns: "*.rules"
+      with_items:
+        - "{{ privileged_commands }}"
+      register: result_augenrules_files
 
-# Adds/overwrites the rule in /etc/audit/audit.rules
-
-- name: Inserts/replaces the rule in audit.rules
-  lineinfile:
-    path: /etc/audit/audit.rules
-    line: '-a always,exit -F path={{ item.item }} -F auid>={{{ auid }}} -F auid!=unset -F key=privileged'
-    create: yes
-    regexp: "^.*path={{ item.item }} .*$"
-  with_items:
-    - "{{ files_result.results }}"
+    - name: {{{ rule_title }}} - Ensure Rules for Privileged Commands are Defined Only in One File
+      ansible.builtin.lineinfile:
+        path: "{{ item.1.path }}"
+        regexp: "^-a always,exit -F path={{ item.0.item }} .*$"
+        state: absent
+      with_subelements:
+        - "{{ result_augenrules_files.results }}"
+        - files
+      when:
+        - item.1.path != '/etc/audit/rules.d/privileged.rules'
+  when: privileged_commands is defined
