coredump_disable_backtraces: depend on systemd being installed
coredump_disable_backtraces only makes sense if systemd is installed
because it checks systemd configuration files and relies on systemd
behavior.

Signed-off-by: Craig Andrews <candrews@integralblue.com>

--- a/linux_os/guide/system/permissions/restrictions/coredumps/coredump_disable_backtraces/rule.yml
+++ b/linux_os/guide/system/permissions/restrictions/coredumps/coredump_disable_backtraces/rule.yml
@@ -68,3 +68,5 @@ warnings:
         If the <tt>/etc/systemd/coredump.conf</tt> file
         does not already contain the <tt>[Coredump]</tt> section,
         the value will not be configured correctly.
+
+platform: package[systemd]
