OCP4: New rule image_pruner_active covers SRG-APP-000454-CTR-001110 and SRG-APP-000454-CTR-001115

--- a/controls/srg_ctr/SRG-APP-000454-CTR-001115.yml
+++ b/controls/srg_ctr/SRG-APP-000454-CTR-001115.yml
@@ -4,4 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} registry must remove old container images after updating
     versions have been made available.
-  status: pending
+  status: automated
+  rules:
+    - image_pruner_active
