--- a/controls/srg_ctr/SRG-APP-000454-CTR-001110.yml
+++ b/controls/srg_ctr/SRG-APP-000454-CTR-001110.yml
@@ -4,4 +4,6 @@ controls:
   - medium
   title: {{{ full_name }}} must remove old components after updated versions
     have been installed.
-  status: pending
+  status: automated
+  rules:
+    - image_pruner_active
