Update RHEL CIS requirement for privileged commands
The 4.1.3.6 CIS requirement for RHEL8 and RHEL9 and the 4.1.11 CIS
requirement for RHEL7 are now satisfied by the
audit_rules_privileged_commands rule.

--- a/controls/cis_rhel9.yml
+++ b/controls/cis_rhel9.yml
@@ -1266,15 +1266,13 @@ controls:
     rules:
       - audit_rules_networkconfig_modification
 
-  # NEEDS RULE
   - id: 4.1.3.6
     title: Ensure use of privileged commands is collected (Automated)
     levels:
       - l2_server
       - l2_workstation
-    status: planned
-    related_rules:
-      # The rule below is almost correct but cannot be used as it does not set the perm=x flag.
+    status: automated
+    rules:
       - audit_rules_privileged_commands
 
   - id: 4.1.3.7
