--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -1,6 +1,6 @@
 ---
-policy: 'Fedora Common User Profile'
-title: 'Fedora Common User Profile'
+policy: 'Fedora Common User Policy'
+title: 'Fedora Common User Policy'
 id: cup_fedora
 version: '1.0.0'
 source: TBD
