--- a/controls/cup_fedora.yml
+++ b/controls/cup_fedora.yml
@@ -1,7 +1,7 @@
 ---
-policy: 'Fedora Common User Policy'
-title: 'Fedora Common User Policy'
-id: cup_fedora
+policy: 'Fedora Common User Security Policy'
+title: 'Fedora Common User Security Policy'
+id: cusp_fedora
 version: '1.0.0'
 source: TBD
 
