Enable rsyslog_filecreatemode rule for RHEL
This rule covers the 4.2.1.4 CIS requirement for RHEL8 and RHEL9, and
the 4.2.1.3 CIS requirement for RHEL7. The prodtype and references
paramenters were updated and identifiers for RHEL were included. The CIS
control files were updated.

--- a/controls/cis_rhel8.yml
+++ b/controls/cis_rhel8.yml
@@ -1703,15 +1703,14 @@ controls:
     rules:
       - journald_forward_to_syslog
 
-  # NEEDS RULE
-  # The rsyslog_files_permissions rule is not sufficient. Needs check for $FileCreateMode.
-  # https://github.com/ComplianceAsCode/content/issues/7332
   - id: 4.2.1.4
     title: Ensure rsyslog default file permissions configured (Automated)
     levels:
       - l1_server
       - l1_workstation
-    status: planned
+    status: automated
+    rules:
+      - rsyslog_filecreatemode
 
   - id: 4.2.1.5
     title: Ensure logging is configured (Manual)
