--- a/controls/cis_rhel7.yml
+++ b/controls/cis_rhel7.yml
@@ -1517,7 +1517,9 @@ controls:
     levels:
     - l1_server
     - l1_workstation
-    automated: no # rule missing
+    status: automated
+    rules:
+      - rsyslog_filecreatemode
 
   - id: 4.2.1.4
     title: Ensure logging is configured (Manual)
