--- a/linux_os/guide/system/logging/rsyslog_filecreatemode/rule.yml
+++ b/linux_os/guide/system/logging/rsyslog_filecreatemode/rule.yml
@@ -1,6 +1,6 @@
 documentation_complete: true
 
-prodtype: ubuntu2004,ubuntu2204
+prodtype: rhel7,rhel8,rhel9,ubuntu2004,ubuntu2204
 
 title: 'Ensure rsyslog Default File Permissions Configured'
 
@@ -15,7 +15,15 @@ rationale: |-
 
 severity: medium
 
+identifiers:
+    cce@rhel7: CCE-88320-7
+    cce@rhel8: CCE-88321-5
+    cce@rhel9: CCE-88322-3
+
 references:
+    cis@rhel7: 4.2.1.3
+    cis@rhel8: 4.2.1.4
+    cis@rhel9: 4.2.1.4
     cis@ubuntu2004: 4.2.1.4
     cis@ubuntu2204: 4.2.2.4
 
