ANSSI control file is no longer draft

--- a/controls/anssi.yml
+++ b/controls/anssi.yml
@@ -1,8 +1,8 @@
 policy: 'ANSSI-BP-028'
-title: '[DRAFT] Configuration Recommendations of a GNU/Linux System'
+title: 'Configuration Recommendations of a GNU/Linux System'
 id: anssi
-version: 'draft'
-source:
+version: '2.0'
+source: https://www.ssi.gouv.fr/uploads/2019/02/fr_np_linux_configuration-v2.0.pdf
 levels:
   - id: minimal
   - id: intermediary
