--- a/applications/openshift/api-server/api_server_encryption_provider_config/rule.yml
+++ b/applications/openshift/api-server/api_server_encryption_provider_config/rule.yml
@@ -4,10 +4,12 @@ prodtype: ocp4
 
 title: 'Configure the Encryption Provider'
 
-{{% set custom_jqfilter = '{{.var_apiserver_encryption_filter}}' %}}
 {{% set default_jqfilter = '[.spec.encryption.type]' %}}
-{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}/apis/hypershift.openshift.io/v1beta1/namespaces/clusters/hostedclusters/{{.hypershift_cluster}}{{else}}{{.var_apiserver_encryption_path}}{{end}}' %}}
 {{% set default_api_path = '/apis/config.openshift.io/v1/apiservers/cluster' %}}
+{{% set hypershift_path = '/apis/hypershift.openshift.io/v1beta1/namespaces/clusters/hostedclusters/{{.hypershift_cluster}}' %}}
+{{% set hypershift_jqfilter = '[.spec.secretEncryption.type]' %}}
+{{% set custom_api_path = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_path ~ '{{else}}' ~  default_api_path ~ '{{end}}' %}}
+{{% set custom_jqfilter = '{{if ne .hypershift_cluster "None"}}' ~ hypershift_jqfilter ~ '{{else}}' ~  default_jqfilter ~ '{{end}}' %}}
 {{% set dump_path = default_api_path ~ ',' ~ default_jqfilter ~ ',' ~ custom_jqfilter %}}
 
 description: |-
