--- a/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/ansible/sle15.yml
+++ b/linux_os/guide/system/network/network-nftables/nftables_rules_permanent/ansible/sle15.yml
@@ -10,10 +10,12 @@
   ansible.builtin.stat:
     path: "{{ var_nftable_master_config_file }}"
 
-{{% for family in nftables_family_names %}}
 - name: Check the {{{ family }}} relevant file is included configuration
   ansible.builtin.lineinfile:
     path: "{{ var_nftable_master_config_file }}"
-    line: 'include "/etc/nftables/{{{ family }}}-filter"'
+    line: 'include "/etc/nftables/{{ item }}-filter"'
     create: yes
-{{% endfor %}}
+  loop:
+    - bridge
+    - arp
+    - inet
