--- a/shared/templates/mount_option_remote_filesystems/ansible.template
+++ b/shared/templates/mount_option_remote_filesystems/ansible.template
@@ -15,10 +15,11 @@
 
 - name: "Add {{{ MOUNTOPTION }}} to nfs and nfs4 mount points"
   mount:
-    path: "{{ item | regex_search('TARGET=\"([^\"]+)\"','\\1') | first | replace('\\x09','\t') }}"
+    path: "{{ item | regex_search('TARGET=\"([^\"]+)\"','\\1') | first }}"
     src: "{{ item | regex_search('SOURCE=\"([^\"]+)\"','\\1') | first }}"
     fstype: "{{ item | regex_search('FSTYPE=\"([^\"]+)\"','\\1') | first }}"
     state: present
     opts: "{{ item | regex_search('OPTIONS=\"([^\"]+)\"','\\1') | first }},{{{ MOUNTOPTION }}}"
-  when: (points_register.stdout | length > 0)
+  # ansible doesn't escape correctly the tab character
+  when: (points_register.stdout | length > 0) and '\\x09' not in item
   with_items: "{{ points_register.stdout_lines }}"
