--- a/tests/unit/ssg-module/data/sshd_disable_root_login.yml
+++ b/tests/unit/ssg-module/data/sshd_disable_root_login.yml
@@ -41,7 +41,7 @@ references: {cis: 5.2.8, cis-csc: '1,11,12,13,14,15,16,18,3,5',
     5.2', iso27001-2013: 'A.10.1.1,A.11.1.4,A.11.1.5,A.11.2.1,A.13.1.1,A.13.1.3,A.13.2.1,A.13.2.3,A.13.2.4,A.14.1.2,A.14.1.3,A.18.1.4,A.6.1.2,A.7.1.1,A.7.1.2,A.7.3.1,A.8.2.2,A.8.2.3,A.9.1.1,A.9.1.2,A.9.2.1,A.9.2.2,A.9.2.3,A.9.2.4,A.9.2.6,A.9.3.1,A.9.4.1,A.9.4.2,A.9.4.3,A.9.4.4,A.9.4.5',
   nist: 'AC-3,AC-6(2),AC-17(b),IA-2,IA-2(5)', nist-csf: 'PR.AC-1,PR.AC-4,PR.AC-6,PR.AC-7,PR.DS-5,PR.PT-3',
   ospp: FIA_UAU.1, srg: SRG-OS-000480-GPOS-00227,
-  stigid@rhel7: 'RHEL-07-040370', vmmsrg: SRG-OS-000480-VMM-002000}
+  stigid@rhel7: 'RHEL-07-040370'}
 severity: medium
 title: Disable SSH Root Login
 warnings: []
