--- a/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nodev/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_nodev/rule.yml
@@ -50,7 +50,7 @@ references:
     stigid@rhel7: RHEL-07-021024
     stigid@rhel8: RHEL-08-040120
 
-platform: machine and partition[shm]
+platform: machine
 
 template:
     name: mount_option
