--- a/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_noexec/rule.yml
+++ b/linux_os/guide/system/permissions/partitions/mount_option_dev_shm_noexec/rule.yml
@@ -52,7 +52,7 @@ references:
     stigid@rhel7: RHEL-07-021024
     stigid@rhel8: RHEL-08-040122
 
-platform: machine and partition[shm]
+platform: machine
 
 fixtext: |-
     {{{ fixtext_mount_option("/dev/shm", "noexec") }}}
