--- a/linux_os/guide/system/apparmor/all_apparmor_profiles_in_enforce_complain_mode/rule.yml
+++ b/linux_os/guide/system/apparmor/all_apparmor_profiles_in_enforce_complain_mode/rule.yml
@@ -1,26 +1,26 @@
 documentation_complete: true
 
-prodtype: sle12,sle15
+prodtype: sle12,sle15,ubuntu2004,ubuntu2204
 
 title:  'All AppArmor Profiles are in enforce or complain mode'
 
 description: |-
     AppArmor profiles define what resources applications are able to access.
-    To set all profiles to either <tt>enforce</tt> or <tt>complain</tt>  mode 
+    To set all profiles to either <tt>enforce</tt> or <tt>complain</tt>  mode
     run the following command to set all profiles to <tt>enforce</tt> mode:
     <pre>$ sudo aa-enforce /etc/apparmor.d/*</pre>
     run the following command to set all profiles to <tt>complain</tt> mode:
     <pre>$ sudo aa-complain /etc/apparmor.d/*</pre>
     To list unconfined processes run the following command:
     <pre>$ sudo aa-unconfined</pre>
-    Any unconfined processes may need to have a profile created or activated 
+    Any unconfined processes may need to have a profile created or activated
     for them and then be restarted.
 
 rationale: |-
-    Security configuration requirements vary from site to site. Some sites may 
-    mandate a policy that is stricter than the default policy, which is perfectly 
-    acceptable. This recommendation is intended to ensure that any policies that 
-    exist on the system are activated. 
+    Security configuration requirements vary from site to site. Some sites may
+    mandate a policy that is stricter than the default policy, which is perfectly
+    acceptable. This recommendation is intended to ensure that any policies that
+    exist on the system are activated.
 
 severity: medium
 
@@ -31,3 +31,5 @@ identifiers:
 references:
     cis@sle12: 1.7.1.3
     cis@sle15: 1.7.1.3
+    cis@ubuntu2004: 1.7.1.3
+    cis@ubuntu2204: 1.6.1.3
