Improve the UX of remediation macros
The form version operator reference_version is more user-friendly

--- a/shared/templates/platform_package/ansible.template
+++ b/shared/templates/platform_package/ansible.template
@@ -1,6 +1,6 @@
 
 {{%- for spec in VER_SPECS -%}}
-{{{ ansible_pkg_conditional(PKGNAME, ver=spec.ev_ver, op=spec.op) | trim }}}
+{{{ ansible_pkg_conditional(PKGNAME, op=spec.op, ver=spec.ev_ver) | trim }}}
 {{%- if not loop.last %}} and {{% endif -%}}
 {{%- else -%}}
 {{{ ansible_pkg_conditional(PKGNAME) }}}
