--- a/shared/templates/platform_package/bash.template
+++ b/shared/templates/platform_package/bash.template
@@ -1,5 +1,5 @@
 {{%- for spec in VER_SPECS -%}}
-{{{ bash_pkg_conditional(PKGNAME, ver=spec.ev_ver, op=spec.op) | trim }}}
+{{{ bash_pkg_conditional(PKGNAME, op=spec.op, ver=spec.ev_ver) | trim }}}
 {{%- if not loop.last %}} && {{% endif -%}}
 {{%- else -%}}
 {{{ bash_pkg_conditional(PKGNAME) }}}
