--- a/applications/openshift/general/oauth_provider_selection_set/rule.yml
+++ b/applications/openshift/general/oauth_provider_selection_set/rule.yml
@@ -33,6 +33,14 @@ references:
   nist: AC-8
   srg: SRG-APP-000068-CTR-000120
 
+ocil_clause: 'provider selection is not set'
+
+ocil: |-
+  To verify that provider selection is properly set, do the following:
+  <pre>$ oc get oauths cluster</pre>
+  make sure that the provider selection is set in the path
+  <tt>.spec.templates.providerSelection.name</tt>, and references a valid secret.
+
 warnings:
 - general: |-
     {{{ openshift_filtered_cluster_setting({custom_api_path: dump_path}) | indent(4) }}}
