--- a/applications/openshift/registry/ocp_allowed_registries_for_import/rule.yml
+++ b/applications/openshift/registry/ocp_allowed_registries_for_import/rule.yml
@@ -28,6 +28,14 @@ references:
     nist: CM-5(3),CM-7(2),CM-7(5),CM-11
     srg: SRG-APP-000456-CTR-001125
 
+ocil_clause: 'allowed registries for import are not set explicitly'
+
+ocil: |-
+  To verify that the allowed registries for import are configured, run the following:
+  <pre>$ oc get image.config.openshift.io cluster -ojsonpath='{.spec.allowedRegistriesForImport[:].domainName}'</pre>
+  make sure the output is not empty and matches the registries that you wish to allow
+  importing from.
+
 warnings:
     - general: |-
         {{{ openshift_cluster_setting("/apis/config.openshift.io/v1/images/cluster") | indent(8) }}}
